--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,32 +26,45 @@
 	</section>
 
 	<section class="section main-section even" id="portfolio-section" data-anchor="portfolio">
-		<h1 class="hero-title mt-2">Portfolio</h1>
+		<div class="bg-clipper">
+			<h1 class="hero-title mt-2 mb-5">Portfolio</h1>
 
-		<div class="slide">
-			<div class="portfolio-item">
-				<h1>Maral.fr</h1>
+			<div class="slide">
+				<div class="portfolio-item row">
+					<div class="portfolio-info col-md-4 offset-md-1">
+						<h1>Maral.fr</h1>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec auctor dui quis maximus feugiat. Duis sit amet sapien aliquet, hendrerit sem non, commodo arcu. Vivamus semper, felis ac
+							condimentum ultricies, odio est elementum turpis, et fringilla orci velit a lorem.
+						</p>
+						<ul>
+							<li>NodeJS</li>
+							<li>API</li>
+							<li>Bootstrap</li>
+							<li>HTML</li>
+							<li>CSS</li>
+						</ul>
+						<div class="skill-call-wrapper">
+							<a href="#skills" class="action-link inverted m-auto">My skills</a>
+						</div>
+					</div>
 
-				<div class="portfolio-thumbnail-wrapper col-md-6 offset-md-3">
-					<a href="https://www.maral.fr" target="_blank"> <img class="w-100" src="/img/maral_thumbnail.jpg" alt="Maral.fr Screenshot" /></a>
+					<div class="portfolio-thumbnail-wrapper col-md-6">
+						<a href="https://www.maral.fr" target="_blank"> <img class="w-100" src="/img/maral_thumbnail.jpg" alt="Maral.fr Screenshot" /></a>
+					</div>
 				</div>
-				<p class="col-md-6 offset-md-3">
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec auctor dui quis maximus feugiat. Duis sit amet sapien aliquet, hendrerit sem non, commodo arcu. Vivamus semper, felis ac
-					condimentum ultricies, odio est elementum turpis, et fringilla orci velit a lorem.
-				</p>
-				<a href="#skills" class="action-link inverted m-auto">My skills</a>
 			</div>
+
+			<div class="slide"></div>
+
+			<div class="slide"></div>
 		</div>
-
-		<div class="slide"></div>
-
-		<div class="slide"></div>
 	</section>
 
 	<section class="section main-section" id="skills-section" data-anchor="skills">
 		<h1 class="hero-title mt-2 mb-0">Skills</h1>
-		<p class="skills-text">Here is a non-exhaustive list of the technologies I work with...</p>
 
+		<p class="skills-text">{ Non-exhaustive list }</p>
 		<div class="skills-section-wrapper">
 			<div class="skills-section">
 				<h2>Front-end</h2>
@@ -95,105 +108,107 @@
 					</div>
 					<h1>}</h1>
 				</div>
-			</div>
 
-			<div class="skills-section">
-				<h2>Back-end</h2>
-				<div class="skills-wrapper">
-					<h1>{</h1>
-					<div class="wrapper-icon">
-						<div>
-							<img class="skill-icon" src="/img/icons/nodejs_icon.png" alt="NodeJS" />
+				<div class="skills-section">
+					<h2>Back-end</h2>
+					<div class="skills-wrapper">
+						<h1>{</h1>
+						<div class="wrapper-icon">
+							<div>
+								<img class="skill-icon" src="/img/icons/nodejs_icon.png" alt="NodeJS" />
+							</div>
+							<label>NodeJS</label>
 						</div>
-						<label>NodeJS</label>
-					</div>
-					<div class="wrapper-icon">
-						<div>
-							<img class="skill-icon" src="/img/icons/css_icon.png" alt="PHP" />
+						<div class="wrapper-icon">
+							<div>
+								<img class="skill-icon" src="/img/icons/css_icon.png" alt="PHP" />
+							</div>
+							<label>PHP</label>
 						</div>
-						<label>PHP</label>
-					</div>
-					<div class="wrapper-icon">
-						<div>
-							<img class="skill-icon" src="/img/icons/database_icon.png" alt="Database SQL/noSQL" />
+						<div class="wrapper-icon">
+							<div>
+								<img class="skill-icon" src="/img/icons/database_icon.png" alt="Database SQL/noSQL" />
+							</div>
+							<label>SQL / noSQL</label>
 						</div>
-						<label>SQL / noSQL</label>
-					</div>
-					<div class="wrapper-icon">
-						<div>
-							<img class="skill-icon" src="/img/icons/api_icon.png" alt="API" />
+						<div class="wrapper-icon">
+							<div>
+								<img class="skill-icon" src="/img/icons/api_icon.png" alt="API" />
+							</div>
+							<label>API</label>
 						</div>
-						<label>API</label>
-					</div>
-					<div class="wrapper-icon">
-						<div>
-							<img class="skill-icon" src="/img/icons/s3_icon.png" alt="S3" />
+						<div class="wrapper-icon">
+							<div>
+								<img class="skill-icon" src="/img/icons/s3_icon.png" alt="S3" />
+							</div>
+							<label>S3</label>
 						</div>
-						<label>S3</label>
+						<h1>}</h1>
 					</div>
-					<h1>}</h1>
+				</div>
+
+				<div class="skills-section">
+					<h2>Misc</h2>
+					<div class="skills-wrapper">
+						<h1>{</h1>
+						<div class="wrapper-icon">
+							<div>
+								<img class="skill-icon" src="/img/icons/git_icon.png" alt="Git" />
+							</div>
+							<label>Git</label>
+						</div>
+						<div class="wrapper-icon">
+							<div>
+								<img class="skill-icon" src="/img/icons/docker_icon.png" alt="Docker" />
+							</div>
+							<label>Docker</label>
+						</div>
+
+						<div class="wrapper-icon">
+							<div>
+								<img class="skill-icon" src="/img/icons/console_icon.png" alt="Shell" />
+							</div>
+							<label>Shell</label>
+						</div>
+						<h1>}</h1>
+					</div>
 				</div>
 			</div>
-
-			<div class="skills-section">
-				<h2>Misc</h2>
-				<div class="skills-wrapper">
-					<h1>{</h1>
-					<div class="wrapper-icon">
-						<div>
-							<img class="skill-icon" src="/img/icons/git_icon.png" alt="Git" />
-						</div>
-						<label>Git</label>
-					</div>
-					<div class="wrapper-icon">
-						<div>
-							<img class="skill-icon" src="/img/icons/docker_icon.png" alt="Docker" />
-						</div>
-						<label>Docker</label>
-					</div>
-
-					<div class="wrapper-icon">
-						<div>
-							<img class="skill-icon" src="/img/icons/console_icon.png" alt="Shell" />
-						</div>
-						<label>Shell</label>
-					</div>
-					<h1>}</h1>
-				</div>
-			</div>
+			<a href="#contact" class="action-link m-auto">Contact me !</a>
 		</div>
-		<a href="#contact" class="action-link m-auto">Contact me !</a>
 	</section>
 
 	<section class="section main-section even" id="contact-section" data-anchor="contact">
-		<h1 class="hero-title mt-2">Contact</h1>
+		<div class="bg-clipper">
+			<h1 class="hero-title mt-2">Contact</h1>
 
-		<form class="col-md-6 offset-md-3 mt-5 p-0" id="contact-form" method="POST" action="/api/contact/">
-			<div class="row">
-				<div class="col-md-12">
-					<label class="control-label">Email</label>
-					<input placeholder="johndoe@gmail.com" type="email" name="email" id="email" required />
+			<form class="col-md-6 offset-md-3 mt-5 p-0" id="contact-form" method="POST" action="/api/contact/">
+				<div class="row">
+					<div class="col-md-12">
+						<label class="control-label">Email</label>
+						<input placeholder="johndoe@gmail.com" type="email" name="email" id="email" required />
+					</div>
 				</div>
-			</div>
-			<div class="row mt-2">
-				<div class="col-md-12">
-					<label class="control-label">Object</label>
-					<input placeholder="Hello..." type="text" name="title" id="title" required />
+				<div class="row mt-2">
+					<div class="col-md-12">
+						<label class="control-label">Object</label>
+						<input placeholder="Hello..." type="text" name="title" id="title" required />
+					</div>
+					<div class="col-md-12 mt-2">
+						<label class="control-label">Message</label>
+						<textarea class="mb-0" id="content" rows="5" name="content" placeholder="Write your message here...." required></textarea>
+					</div>
 				</div>
-				<div class="col-md-12 mt-2">
-					<label class="control-label">Message</label>
-					<textarea class="mb-0" id="content" rows="5" name="content" placeholder="Write your message here...." required></textarea>
-				</div>
-			</div>
-			<input type="submit" class="action-btn inverted" value="Send" id="submit-contact" />
-			<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
-		</form>
+				<input type="submit" class="action-btn inverted" value="Send" id="submit-contact" />
+				<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
+			</form>
 
-		<div class="contact-footer">
-			<ul>
-				<li><i class="fas fa-phone"></i> +33 6 89 89 81 98</li>
-				<li>ablin.dev@gmail.com <i class="fas fa-envelope"></i></li>
-			</ul>
+			<div class="contact-footer mb-5">
+				<ul>
+					<li><i class="fas fa-phone"></i> +33 6 89 89 81 98</li>
+					<li>ablin.dev@gmail.com <i class="fas fa-envelope"></i></li>
+				</ul>
+			</div>
 		</div>
 	</section>
 </div>
@@ -205,7 +220,7 @@
 		anchors: ["landing", "portfolio", "skills", "contact"],
 		navigation: true,
 		navigationPosition: "right",
-		navigationTooltips: ["Landing", "Portfolio", "Skills"],
+		navigationTooltips: ["Landing", "Portfolio", "Skills", "Contact"],
 		showActiveTooltip: false
 		//slidesNavigation: false,
 		//slidesNavPosition: "bottom"
