--- a/public/main.scss
+++ b/public/main.scss
@@ -67,6 +67,7 @@ html {
 }
 
 body {
+	background-color: var(--main-color);
 	overflow-x: hidden;
 	z-index: 0;
 }
@@ -83,6 +84,9 @@ body {
 	transition: 0.2s ease-in;
 	opacity: 1;
 	z-index: 5;
+
+	-webkit-clip-path: polygon(calc(100% - 15px) 0, 100% 15px, 100% 100%, 15px 100%, 0 calc(100% - 15px), 0 0);
+	clip-path: polygon(calc(100% - 15px) 0, 100% 15px, 100% 100%, 15px 100%, 0 calc(100% - 15px), 0 0);
 }
 
 .action-btn:hover {
@@ -105,11 +109,14 @@ body {
 	text-decoration: none;
 	font-size: 24px;
 	text-align: center;
+
+	-webkit-clip-path: polygon(calc(100% - 15px) 0, 100% 15px, 100% 100%, 15px 100%, 0 calc(100% - 15px), 0 0);
+	clip-path: polygon(calc(100% - 15px) 0, 100% 15px, 100% 100%, 15px 100%, 0 calc(100% - 15px), 0 0);
 }
 
 .portfolio-link {
 	margin-left: 21%;
-	margin-top: 9%;
+	margin-top: 6.35%;
 }
 
 .action-link:hover {
@@ -229,12 +236,15 @@ select:-webkit-autofill {
 /* HOME */
 #landing-section {
 	background-repeat: no-repeat;
-	background-image: url(/svg/background_landing.svg);
-	/*background-size: cover;*/
+	background-color: var(--dark-shade);
+	clip-path: polygon(0px 0px, 100% 0px, 100% 98%, 89% 95%, 31% 85%, 0px 78%);
+	/*background-image: url(/svg/background_landing.svg);
+	background-size: cover;*/
 	z-index: 2;
 }
 
 .main-section {
+	background-color: var(--dark-shade);
 	height: 100vh;
 }
 
@@ -301,6 +311,7 @@ select:-webkit-autofill {
 	margin-left: 10%;
 	margin-top: -25px;
 	font-style: italic;
+	display: inline-block;
 }
 
 .main-section.even .hero-title {
@@ -316,9 +327,13 @@ select:-webkit-autofill {
 	margin-top: -20px;
 }
 
+#skills-section {
+	clip-path: polygon(0 0, 100% 0, 100% 98%, 75% 95%, 22% 93%, 0 90%);
+}
+
 .skills-section-wrapper {
 	width: 70%;
-	margin: 25px auto 15px auto;
+	margin: 0 auto 15px auto;
 }
 
 .skills-section {
@@ -334,7 +349,10 @@ select:-webkit-autofill {
 	color: var(--main-color);
 	opacity: 0.95;
 	font-size: 2em;
-	margin-top: -25px;
+	transform: rotate(90deg);
+	position: absolute;
+	right: 6%;
+	top: 50%;
 }
 
 .skills-wrapper {
@@ -370,33 +388,49 @@ select:-webkit-autofill {
 	}
 }
 
-.contact-footer {
-	position: absolute;
-	bottom: 0;
-	width: 100%;
+#contact-section {
+	background-color: var(--dark-shade);
 
-	ul {
-		list-style: none;
-		display: flex;
-		justify-content: center;
+	.bg-clipper {
+		clip-path: polygon(0 0, 100% 0, 100% 85%, 75% 97%, 28% 89%, 0 80%);
+		background-color: var(--main-color);
 	}
 
-	li {
-		display: inline-block;
-		font-size: 26px;
-		font-weight: bold;
-		margin: 0 15px;
-		width: 315px;
-		text-align: right;
+	.contact-footer {
+		height: 200px;
+		width: 100%;
+		margin-top: 25px;
+		width: 100%;
+
+		ul {
+			list-style: none;
+			display: flex;
+			justify-content: center;
+		}
+
+		li {
+			display: inline-block;
+			font-size: 26px;
+			font-weight: bold;
+			margin: 0 15px;
+			width: 315px;
+			text-align: right;
+		}
 	}
 }
 
 #portfolio-section {
+	background-color: var(--dark-shade);
+
+	.bg-clipper {
+		background-color: var(--main-color);
+		clip-path: polygon(0 0, 100% 0, 100% 73%, 71% 77%, 29% 79%, 0 81%);
+	}
+
 	.hero-title {
 		margin-bottom: -45px;
 	}
 	.portfolio-thumbnail-wrapper {
-		margin: auto;
 		padding: 50px;
 		background-color: var(--dark-shade-m1);
 	}
@@ -404,13 +438,56 @@ select:-webkit-autofill {
 	.portfolio-item {
 		h1 {
 			text-align: center;
+			font-weight: bold;
 		}
-	}
+		ul {
+			justify-content: center;
+			margin-bottom: 0;
+			display: flex;
+			flex-wrap: wrap;
+			li {
+				display: inline-block;
+				margin: 10px 10px 0 10px;
+				padding: 5px 15px;
+				background-color: var(--light-gray);
+				color: var(--main-color);
+				font-weight: bold;
+				transition: 0.3s ease-in-out;
 
-	p {
-		text-align: center;
-		font-size: 20px;
-		margin-top: 10px;
+				-webkit-clip-path: polygon(calc(100% - 15px) 0, 100% 15px, 100% 100%, 15px 100%, 0 calc(100% - 15px), 0 0);
+				clip-path: polygon(calc(100% - 15px) 0, 100% 15px, 100% 100%, 15px 100%, 0 calc(100% - 15px), 0 0);
+			}
+
+			li:hover {
+				transform: scale(1.1);
+				background-color: var(--main-color);
+				color: var(--light-gray);
+			}
+		}
+		p {
+			text-align: left;
+			font-size: 20px;
+			margin-top: 10px;
+			text-indent: 50px;
+		}
+
+		.skill-call-wrapper {
+			position: absolute;
+			bottom: 0;
+			width: 100%;
+			text-align: center;
+		}
+
+		.action-link {
+			position: relative;
+			bottom: 0;
+		}
+
+		.portfolio-info {
+			margin-top: 1rem;
+			padding: 1.5rem;
+			height: auto !important;
+		}
 	}
 }
 /* END HOME */
