added brand color, set backgrounds to black & white

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,27 +2,29 @@
 
 <div id="fullPage">
 	<section class="section main-section hero" id="landing-section" data-anchor="landing">
-		<nav class="navbar navbar-dark">
-			<a class="navbar-brand" href="#">ablin@dev</a>
+		<div class="bg-clipper">
+			<nav class="navbar navbar-dark pt-4">
+				<a class="navbar-brand" href="#">ablin@dev</a>
 
-			<ul class="navbar-nav">
-				<li class="nav-item">
-					<a class="nav-link" href="https://www.github.com/ablin42" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="https://www.linkedin.com/in/ablin42/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
-				</li>
-			</ul>
-		</nav>
+				<ul class="navbar-nav">
+					<li class="nav-item">
+						<a class="nav-link" href="https://www.github.com/ablin42" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="https://www.linkedin.com/in/ablin42/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+					</li>
+				</ul>
+			</nav>
 
-		<h3>Hi, Im a <b>{ fullstack web developer }</b> and my name is</h3>
-		<h1 class="hero-title">Andréas Blin</h1>
-		<h2 class="hero-secondary-title">I will build the website you've been dreaming of</h2>
+			<h3>Hi, Im a <b>{ fullstack web developer }</b> and my name is</h3>
+			<h1 class="hero-title">Andréas Blin</h1>
+			<h2 class="hero-secondary-title">I will build the website you've been dreaming of</h2>
 
-		<a href="#portfolio" class="action-link portfolio-link">My portfolio</a>
+			<a href="#portfolio" class="action-link portfolio-link">Portfolio</a>
 
-		<img src="/svg/undraw_freelancer.svg" class="freelancer-svg" alt="Freelance Illustration" />
-		<div class="scroll-indicator"></div>
+			<img src="/svg/undraw_freelancer.svg" class="freelancer-svg" alt="Freelance Illustration" />
+			<div class="scroll-indicator"></div>
+		</div>
 	</section>
 
 	<section class="section main-section even" id="portfolio-section" data-anchor="portfolio">
@@ -33,6 +35,10 @@
 				<div class="portfolio-item row">
 					<div class="portfolio-info col-md-4 offset-md-1">
 						<h1>Maral.fr</h1>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec auctor dui quis maximus feugiat. Duis sit amet sapien aliquet, hendrerit sem non, commodo arcu. Vivamus semper, felis ac
+							condimentum ultricies, odio est elementum turpis, et fringilla orci velit a lorem.
+						</p>
 						<p>
 							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec auctor dui quis maximus feugiat. Duis sit amet sapien aliquet, hendrerit sem non, commodo arcu. Vivamus semper, felis ac
 							condimentum ultricies, odio est elementum turpis, et fringilla orci velit a lorem.
@@ -62,119 +68,121 @@
 	</section>
 
 	<section class="section main-section" id="skills-section" data-anchor="skills">
-		<h1 class="hero-title mt-2 mb-0">Skills</h1>
+		<div class="bg-clipper">
+			<h1 class="hero-title mt-2 mb-0">Skills</h1>
 
-		<p class="skills-text">{ Non-exhaustive list }</p>
-		<div class="skills-section-wrapper">
-			<div class="skills-section">
-				<h2>Front-end</h2>
-				<div class="skills-wrapper">
-					<h1>{</h1>
-					<div class="wrapper-icon">
-						<div>
-							<img class="skill-icon" src="/img/icons/javascript_icon.png" alt="Javascript" />
-						</div>
-						<label>Javascript</label>
-					</div>
-					<div class="wrapper-icon">
-						<div>
-							<img class="skill-icon" src="/img/icons/html_icon.png" alt="HTML5" />
-						</div>
-						<label>HTML5</label>
-					</div>
-					<div class="wrapper-icon">
-						<div>
-							<img class="skill-icon" src="/img/icons/css_icon.png" alt="CSS3" />
-						</div>
-						<label>CSS3</label>
-					</div>
-					<div class="wrapper-icon">
-						<div>
-							<img class="skill-icon" src="/img/icons/sass_icon.png" alt="SASS" />
-						</div>
-						<label>SASS</label>
-					</div>
-					<div class="wrapper-icon">
-						<div>
-							<img class="skill-icon" src="/img/icons/vuejs_icon.png" alt="Vuejs" />
-						</div>
-						<label>Vue.js</label>
-					</div>
-					<div class="wrapper-icon">
-						<div>
-							<img class="skill-icon" src="/img/icons/bootstrap_icon.png" alt="Bootstrap" />
-						</div>
-						<label>Bootstrap</label>
-					</div>
-					<h1>}</h1>
-				</div>
-
+			<p class="skills-text">{ Non-exhaustive list }</p>
+			<div class="skills-section-wrapper">
 				<div class="skills-section">
-					<h2>Back-end</h2>
+					<h2>Front-end</h2>
 					<div class="skills-wrapper">
 						<h1>{</h1>
 						<div class="wrapper-icon">
 							<div>
-								<img class="skill-icon" src="/img/icons/nodejs_icon.png" alt="NodeJS" />
+								<img class="skill-icon" src="/img/icons/javascript_icon.png" alt="Javascript" />
 							</div>
-							<label>NodeJS</label>
+							<label>Javascript</label>
 						</div>
 						<div class="wrapper-icon">
 							<div>
-								<img class="skill-icon" src="/img/icons/css_icon.png" alt="PHP" />
+								<img class="skill-icon" src="/img/icons/html_icon.png" alt="HTML5" />
 							</div>
-							<label>PHP</label>
+							<label>HTML5</label>
 						</div>
 						<div class="wrapper-icon">
 							<div>
-								<img class="skill-icon" src="/img/icons/database_icon.png" alt="Database SQL/noSQL" />
+								<img class="skill-icon" src="/img/icons/css_icon.png" alt="CSS3" />
 							</div>
-							<label>SQL / noSQL</label>
+							<label>CSS3</label>
 						</div>
 						<div class="wrapper-icon">
 							<div>
-								<img class="skill-icon" src="/img/icons/api_icon.png" alt="API" />
+								<img class="skill-icon" src="/img/icons/sass_icon.png" alt="SASS" />
 							</div>
-							<label>API</label>
+							<label>SASS</label>
 						</div>
 						<div class="wrapper-icon">
 							<div>
-								<img class="skill-icon" src="/img/icons/s3_icon.png" alt="S3" />
+								<img class="skill-icon" src="/img/icons/vuejs_icon.png" alt="Vuejs" />
 							</div>
-							<label>S3</label>
+							<label>Vue.js</label>
+						</div>
+						<div class="wrapper-icon">
+							<div>
+								<img class="skill-icon" src="/img/icons/bootstrap_icon.png" alt="Bootstrap" />
+							</div>
+							<label>Bootstrap</label>
 						</div>
 						<h1>}</h1>
 					</div>
-				</div>
 
-				<div class="skills-section">
-					<h2>Misc</h2>
-					<div class="skills-wrapper">
-						<h1>{</h1>
-						<div class="wrapper-icon">
-							<div>
-								<img class="skill-icon" src="/img/icons/git_icon.png" alt="Git" />
+					<div class="skills-section">
+						<h2>Back-end</h2>
+						<div class="skills-wrapper">
+							<h1>{</h1>
+							<div class="wrapper-icon">
+								<div>
+									<img class="skill-icon" src="/img/icons/nodejs_icon.png" alt="NodeJS" />
+								</div>
+								<label>NodeJS</label>
 							</div>
-							<label>Git</label>
-						</div>
-						<div class="wrapper-icon">
-							<div>
-								<img class="skill-icon" src="/img/icons/docker_icon.png" alt="Docker" />
+							<div class="wrapper-icon">
+								<div>
+									<img class="skill-icon" src="/img/icons/css_icon.png" alt="PHP" />
+								</div>
+								<label>PHP</label>
 							</div>
-							<label>Docker</label>
+							<div class="wrapper-icon">
+								<div>
+									<img class="skill-icon" src="/img/icons/database_icon.png" alt="Database SQL/noSQL" />
+								</div>
+								<label>SQL / noSQL</label>
+							</div>
+							<div class="wrapper-icon">
+								<div>
+									<img class="skill-icon" src="/img/icons/api_icon.png" alt="API" />
+								</div>
+								<label>API</label>
+							</div>
+							<div class="wrapper-icon">
+								<div>
+									<img class="skill-icon" src="/img/icons/s3_icon.png" alt="S3" />
+								</div>
+								<label>S3</label>
+							</div>
+							<h1>}</h1>
 						</div>
+					</div>
 
-						<div class="wrapper-icon">
-							<div>
-								<img class="skill-icon" src="/img/icons/console_icon.png" alt="Shell" />
+					<div class="skills-section">
+						<h2>Misc</h2>
+						<div class="skills-wrapper">
+							<h1>{</h1>
+							<div class="wrapper-icon">
+								<div>
+									<img class="skill-icon" src="/img/icons/git_icon.png" alt="Git" />
+								</div>
+								<label>Git</label>
 							</div>
-							<label>Shell</label>
+							<div class="wrapper-icon">
+								<div>
+									<img class="skill-icon" src="/img/icons/docker_icon.png" alt="Docker" />
+								</div>
+								<label>Docker</label>
+							</div>
+
+							<div class="wrapper-icon">
+								<div>
+									<img class="skill-icon" src="/img/icons/console_icon.png" alt="Shell" />
+								</div>
+								<label>Shell</label>
+							</div>
+							<h1>}</h1>
 						</div>
-						<h1>}</h1>
 					</div>
 				</div>
+				<a href="#contact" class="action-link m-auto">Contact me !</a>
 			</div>
-			<a href="#contact" class="action-link m-auto">Contact me !</a>
 		</div>
 	</section>
 
@@ -216,6 +224,7 @@
 <script>
 	new fullpage("#fullPage", {
 		autoScrolling: true,
+		scrollingSpeed: 1000,
 
 		anchors: ["landing", "portfolio", "skills", "contact"],
 		navigation: true,
