--- a/public/main.css
+++ b/public/main.css
@@ -14,8 +14,19 @@
 /* main */
 /* GLOBAL */
 :root {
-  --main-color: #cd5c5c;
-  --dark-shade: #0e0e0e;
+  /* alt main colors
+		#f34023 orangeish
+ 		#5f23f3 purple
+	
+	--main-color: #cd5c5c;
+
+	--dark-shade: #0e0e0e;
+	--dark-shade-m1: #232323;
+
+	--light-gray: #f2f2f2;*/
+  --main-color: #f1f1f1;
+  --brand-color: #f34023;
+  --dark-shade: #080808;
   --dark-shade-m1: #232323;
   --light-gray: #f2f2f2;
 }
@@ -48,7 +59,7 @@ body {
   width: 100%;
   height: 50px;
   border: none !important;
-  background: var(--main-color);
+  background: var(--brand-color) !important;
   color: white;
   outline: none;
   cursor: pointer;
@@ -68,7 +79,7 @@ body {
   display: block;
   padding: 10px 0;
   border: none !important;
-  background: var(--main-color);
+  background: var(--brand-color);
   color: white;
   outline: none;
   cursor: pointer;
@@ -91,21 +102,21 @@ body {
 
 .action-link:hover {
   background: var(--light-gray) !important;
-  color: var(--main-color) !important;
+  color: var(--brand-color) !important;
   text-decoration: none;
   font-weight: bold;
 }
 
+/*
 .action-link.inverted,
 .action-btn.inverted {
-  background: var(--light-gray) !important;
-  color: var(--main-color) !important;
-}
-
+	background: var(--dark-shade-m1) !important;
+	color: var(--brand-color) !important;
+}*/
 .action-link.inverted:hover,
 .action-btn.inverted:hover {
-  background: var(--dark-shade) !important;
-  color: var(--main-color) !important;
+  background: var(--dark-shade-m1) !important;
+  color: var(--brand-color) !important;
   font-weight: bold;
 }
 
@@ -117,17 +128,19 @@ body {
 
 .fp-controlArrow.fp-next {
   right: 50px;
+  border-color: transparent transparent transparent var(--dark-shade-m1);
 }
 
 .fp-controlArrow.fp-prev {
   left: 50px;
+  border-color: transparent var(--dark-shade-m1) transparent transparent;
 }
 
 input,
 textarea {
   background-color: #e6e6e6 !important;
   font-weight: bold;
-  color: var(--brand-blue-m2);
+  color: var(--brand-color);
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   border: 2px solid transparent !important;
@@ -153,7 +166,7 @@ select:-webkit-autofill:focus {
 input:-webkit-autofill,
 textarea:-webkit-autofill,
 select:-webkit-autofill {
-  -webkit-text-fill-color: var(--dark-shade-m1) !important;
+  -webkit-text-fill-color: var(--brand-color) !important;
   border: 2px solid transparent !important;
   box-shadow: 0 0 0 30px #e6e6e6 inset !important;
   -webkit-box-shadow: 0 0 0 30px #e6e6e6 inset !important;
@@ -164,6 +177,7 @@ select:-webkit-autofill {
   font-size: 24px;
   color: var(--dark-shade);
   font-weight: bold;
+  margin-bottom: -3px;
 }
 
 /* END GLOBAL */
@@ -181,7 +195,7 @@ select:-webkit-autofill {
 }
 
 .navbar-brand:hover {
-  color: var(--main-color) !important;
+  color: var(--brand-color) !important;
 }
 
 .navbar-dark {
@@ -212,7 +226,7 @@ select:-webkit-autofill {
 }
 
 .navbar-nav li a i:hover {
-  color: var(--main-color);
+  color: var(--brand-color);
 }
 
 /* END NAVBAR */
@@ -220,8 +234,6 @@ select:-webkit-autofill {
 #landing-section {
   background-repeat: no-repeat;
   background-color: var(--dark-shade);
-  -webkit-clip-path: polygon(0px 0px, 100% 0px, 100% 98%, 89% 95%, 31% 85%, 0px 78%);
-          clip-path: polygon(0px 0px, 100% 0px, 100% 98%, 89% 95%, 31% 85%, 0px 78%);
   /*background-image: url(/svg/background_landing.svg);
 	background-size: cover;*/
   z-index: 2;
@@ -242,7 +254,7 @@ select:-webkit-autofill {
 
 .hero h3 {
   font-size: 22px;
-  color: var(--main-color);
+  color: var(--brand-color);
   opacity: 0.85;
   margin-top: 10%;
   margin-left: 13%;
@@ -253,7 +265,10 @@ select:-webkit-autofill {
 }
 
 .scroll-indicator {
-  height: 140px;
+  height: 100px;
+  position: absolute;
+  left: 50%;
+  top: 80%;
 }
 
 .scroll-indicator::before {
@@ -291,7 +306,7 @@ select:-webkit-autofill {
 .freelancer-svg {
   width: 45%;
   position: absolute;
-  left: 45%;
+  left: 50%;
   top: 25%;
   z-index: 1;
 }
@@ -300,7 +315,7 @@ select:-webkit-autofill {
   font-size: 8rem;
   font-family: "Montserrat";
   font-weight: bold;
-  color: var(--main-color);
+  color: var(--brand-color);
   margin-left: 10%;
   margin-top: -25px;
   font-style: italic;
@@ -308,11 +323,11 @@ select:-webkit-autofill {
 }
 
 .main-section.even .hero-title {
-  color: var(--dark-shade);
+  color: var(--brand-color);
 }
 
 .hero-secondary-title {
-  color: var(--main-color);
+  color: var(--brand-color);
   opacity: 0.9;
   font-size: 3.5rem;
   width: 50%;
@@ -321,24 +336,30 @@ select:-webkit-autofill {
 }
 
 #skills-section {
+  background-color: var(--main-color);
+}
+
+#skills-section .bg-clipper {
+  height: 100%;
+  background-color: var(--dark-shade);
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 98%, 75% 95%, 22% 93%, 0 90%);
           clip-path: polygon(0 0, 100% 0, 100% 98%, 75% 95%, 22% 93%, 0 90%);
 }
 
-.skills-section-wrapper {
+#skills-section .skills-section-wrapper {
   width: 70%;
   margin: 0 auto 15px auto;
 }
 
-.skills-section h2 {
+#skills-section .skills-section h2 {
   font-size: 3rem;
-  color: var(--main-color);
+  color: var(--brand-color);
   opacity: 0.95;
 }
 
-.skills-text {
+#skills-section .skills-text {
   text-align: center;
-  color: var(--main-color);
+  color: var(--brand-color);
   opacity: 0.95;
   font-size: 2em;
   -webkit-transform: rotate(90deg);
@@ -348,7 +369,7 @@ select:-webkit-autofill {
   top: 50%;
 }
 
-.skills-wrapper {
+#skills-section .skills-wrapper {
   width: 70%;
   margin: 25px auto;
   display: -webkit-box;
@@ -361,17 +382,17 @@ select:-webkit-autofill {
       flex-wrap: wrap;
 }
 
-.skills-wrapper h1 {
+#skills-section .skills-wrapper h1 {
   font-size: 75px;
   color: var(--dark-shade-m1);
 }
 
-.skills-wrapper .wrapper-icon {
+#skills-section .skills-wrapper .wrapper-icon {
   margin: auto 0;
   padding: 0 10px;
 }
 
-.skills-wrapper .wrapper-icon div {
+#skills-section .skills-wrapper .wrapper-icon div {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -380,17 +401,28 @@ select:-webkit-autofill {
           align-items: center;
 }
 
-.skills-wrapper .wrapper-icon label {
+#skills-section .skills-wrapper .wrapper-icon label {
   display: block;
   text-align: center;
   color: var(--light-gray);
 }
 
-.skills-wrapper .wrapper-icon .skill-icon {
+#skills-section .skills-wrapper .wrapper-icon .skill-icon {
   max-width: 100%;
   height: 80px;
   width: 80px;
   margin: auto;
+}
+
+#landing-section {
+  background-color: var(--main-color);
+}
+
+#landing-section .bg-clipper {
+  height: 100%;
+  background-color: var(--dark-shade);
+  -webkit-clip-path: polygon(0px 0px, 100% 0px, 100% 98%, 89% 95%, 31% 85%, 0px 78%);
+          clip-path: polygon(0px 0px, 100% 0px, 100% 98%, 89% 95%, 31% 85%, 0px 78%);
 }
 
 #contact-section {
@@ -398,6 +430,7 @@ select:-webkit-autofill {
 }
 
 #contact-section .bg-clipper {
+  height: 100%;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 75% 97%, 28% 89%, 0 80%);
           clip-path: polygon(0 0, 100% 0, 100% 85%, 75% 97%, 28% 89%, 0 80%);
   background-color: var(--main-color);
@@ -406,7 +439,7 @@ select:-webkit-autofill {
 #contact-section .contact-footer {
   height: 200px;
   width: 100%;
-  margin-top: 25px;
+  margin-top: 110px;
   width: 100%;
 }
 
@@ -429,6 +462,10 @@ select:-webkit-autofill {
   text-align: right;
 }
 
+#contact-section .contact-footer li i {
+  color: var(--brand-color);
+}
+
 #portfolio-section {
   background-color: var(--dark-shade);
 }
@@ -444,8 +481,13 @@ select:-webkit-autofill {
 }
 
 #portfolio-section .portfolio-thumbnail-wrapper {
-  padding: 50px;
+  padding: 10px;
   background-color: var(--dark-shade-m1);
+}
+
+#portfolio-section .portfolio-thumbnail-wrapper img {
+  -webkit-clip-path: polygon(calc(100% - 50px) 0, 100% 50px, 100% 100%, 50px 100%, 0 calc(100% - 50px), 0 0);
+          clip-path: polygon(calc(100% - 50px) 0, 100% 50px, 100% 100%, 50px 100%, 0 calc(100% - 50px), 0 0);
 }
 
 #portfolio-section .portfolio-item h1 {
@@ -469,8 +511,8 @@ select:-webkit-autofill {
   display: inline-block;
   margin: 10px 10px 0 10px;
   padding: 5px 15px;
-  background-color: var(--light-gray);
-  color: var(--main-color);
+  background-color: var(--dark-shade-m1);
+  color: var(--brand-color);
   font-weight: bold;
   -webkit-transition: 0.3s ease-in-out;
   transition: 0.3s ease-in-out;
@@ -482,7 +524,6 @@ select:-webkit-autofill {
   -webkit-transform: scale(1.1);
           transform: scale(1.1);
   background-color: var(--main-color);
-  color: var(--light-gray);
 }
 
 #portfolio-section .portfolio-item p {
