--- a/public/main.scss
+++ b/public/main.scss
@@ -42,9 +42,21 @@ html[data-theme="dark"] {
 
 /* GLOBAL */
 :root {
+	/* alt main colors
+		#f34023 orangeish
+ 		#5f23f3 purple
+	
 	--main-color: #cd5c5c;
 
 	--dark-shade: #0e0e0e;
+	--dark-shade-m1: #232323;
+
+	--light-gray: #f2f2f2;*/
+
+	--main-color: #f1f1f1;
+	--brand-color: #f34023;
+
+	--dark-shade: #080808;
 	--dark-shade-m1: #232323;
 
 	--light-gray: #f2f2f2;
@@ -77,7 +89,7 @@ body {
 	width: 100%;
 	height: 50px;
 	border: none !important;
-	background: var(--main-color);
+	background: var(--brand-color) !important;
 	color: white;
 	outline: none;
 	cursor: pointer;
@@ -97,7 +109,7 @@ body {
 	display: block;
 	padding: 10px 0;
 	border: none !important;
-	background: var(--main-color);
+	background: var(--brand-color);
 	color: white;
 	outline: none;
 	cursor: pointer;
@@ -121,21 +133,22 @@ body {
 
 .action-link:hover {
 	background: var(--light-gray) !important;
-	color: var(--main-color) !important;
+	color: var(--brand-color) !important;
 	text-decoration: none;
 	font-weight: bold;
 }
 
+/*
 .action-link.inverted,
 .action-btn.inverted {
-	background: var(--light-gray) !important;
-	color: var(--main-color) !important;
-}
+	background: var(--dark-shade-m1) !important;
+	color: var(--brand-color) !important;
+}*/
 
 .action-link.inverted:hover,
 .action-btn.inverted:hover {
-	background: var(--dark-shade) !important;
-	color: var(--main-color) !important;
+	background: var(--dark-shade-m1) !important;
+	color: var(--brand-color) !important;
 	font-weight: bold;
 }
 
@@ -145,17 +158,19 @@ body {
 
 .fp-controlArrow.fp-next {
 	right: 50px;
+	border-color: transparent transparent transparent var(--dark-shade-m1);
 }
 
 .fp-controlArrow.fp-prev {
 	left: 50px;
+	border-color: transparent var(--dark-shade-m1) transparent transparent;
 }
 
 input,
 textarea {
 	background-color: #e6e6e6 !important;
 	font-weight: bold;
-	color: var(--brand-blue-m2);
+	color: var(--brand-color);
 	box-sizing: border-box;
 	border: 2px solid transparent !important;
 	padding: 12px 15px;
@@ -179,7 +194,7 @@ select:-webkit-autofill:focus {
 input:-webkit-autofill,
 textarea:-webkit-autofill,
 select:-webkit-autofill {
-	-webkit-text-fill-color: var(--dark-shade-m1) !important;
+	-webkit-text-fill-color: var(--brand-color) !important;
 	border: 2px solid transparent !important;
 	box-shadow: 0 0 0 30px #e6e6e6 inset !important;
 	-webkit-box-shadow: 0 0 0 30px #e6e6e6 inset !important;
@@ -190,6 +205,7 @@ select:-webkit-autofill {
 	font-size: 24px;
 	color: var(--dark-shade);
 	font-weight: bold;
+	margin-bottom: -3px;
 }
 /* END GLOBAL */
 
@@ -205,7 +221,7 @@ select:-webkit-autofill {
 }
 
 .navbar-brand:hover {
-	color: var(--main-color) !important;
+	color: var(--brand-color) !important;
 }
 
 .navbar-dark {
@@ -226,7 +242,7 @@ select:-webkit-autofill {
 			}
 
 			i:hover {
-				color: var(--main-color);
+				color: var(--brand-color);
 			}
 		}
 	}
@@ -237,7 +253,6 @@ select:-webkit-autofill {
 #landing-section {
 	background-repeat: no-repeat;
 	background-color: var(--dark-shade);
-	clip-path: polygon(0px 0px, 100% 0px, 100% 98%, 89% 95%, 31% 85%, 0px 78%);
 	/*background-image: url(/svg/background_landing.svg);
 	background-size: cover;*/
 	z-index: 2;
@@ -257,7 +272,7 @@ select:-webkit-autofill {
 
 	h3 {
 		font-size: 22px;
-		color: var(--main-color);
+		color: var(--brand-color);
 		opacity: 0.85;
 		margin-top: 10%;
 		margin-left: 13%;
@@ -269,7 +284,10 @@ select:-webkit-autofill {
 }
 
 .scroll-indicator {
-	height: 140px;
+	height: 100px;
+	position: absolute;
+	left: 50%;
+	top: 80%;
 }
 
 .scroll-indicator::before {
@@ -298,7 +316,7 @@ select:-webkit-autofill {
 .freelancer-svg {
 	width: 45%;
 	position: absolute;
-	left: 45%;
+	left: 50%;
 	top: 25%;
 	z-index: 1;
 }
@@ -307,7 +325,7 @@ select:-webkit-autofill {
 	font-size: 8rem;
 	font-family: "Montserrat";
 	font-weight: bold;
-	color: var(--main-color);
+	color: var(--brand-color);
 	margin-left: 10%;
 	margin-top: -25px;
 	font-style: italic;
@@ -315,11 +333,11 @@ select:-webkit-autofill {
 }
 
 .main-section.even .hero-title {
-	color: var(--dark-shade);
+	color: var(--brand-color);
 }
 
 .hero-secondary-title {
-	color: var(--main-color);
+	color: var(--brand-color);
 	opacity: 0.9;
 	font-size: 3.5rem;
 	width: 50%;
@@ -328,63 +346,79 @@ select:-webkit-autofill {
 }
 
 #skills-section {
-	clip-path: polygon(0 0, 100% 0, 100% 98%, 75% 95%, 22% 93%, 0 90%);
-}
+	background-color: var(--main-color);
 
-.skills-section-wrapper {
-	width: 70%;
-	margin: 0 auto 15px auto;
-}
+	.bg-clipper {
+		height: 100%;
+		background-color: var(--dark-shade);
+		clip-path: polygon(0 0, 100% 0, 100% 98%, 75% 95%, 22% 93%, 0 90%);
+	}
 
-.skills-section {
-	h2 {
-		font-size: 3rem;
-		color: var(--main-color);
+	.skills-section-wrapper {
+		width: 70%;
+		margin: 0 auto 15px auto;
+	}
+
+	.skills-section {
+		h2 {
+			font-size: 3rem;
+			color: var(--brand-color);
+			opacity: 0.95;
+		}
+	}
+
+	.skills-text {
+		text-align: center;
+		color: var(--brand-color);
 		opacity: 0.95;
+		font-size: 2em;
+		transform: rotate(90deg);
+		position: absolute;
+		right: 6%;
+		top: 50%;
+	}
+
+	.skills-wrapper {
+		width: 70%;
+		margin: 25px auto;
+		display: flex;
+		justify-content: space-evenly;
+		flex-wrap: wrap;
+
+		h1 {
+			font-size: 75px;
+			color: var(--dark-shade-m1);
+		}
+
+		.wrapper-icon {
+			margin: auto 0;
+			padding: 0 10px;
+			div {
+				display: flex;
+				align-items: center;
+			}
+			label {
+				display: block;
+				text-align: center;
+				color: var(--light-gray);
+			}
+			.skill-icon {
+				max-width: 100%;
+				height: 80px;
+				width: 80px;
+				margin: auto;
+			}
+		}
 	}
 }
 
-.skills-text {
-	text-align: center;
-	color: var(--main-color);
-	opacity: 0.95;
-	font-size: 2em;
-	transform: rotate(90deg);
-	position: absolute;
-	right: 6%;
-	top: 50%;
-}
+#landing-section {
+	background-color: var(--main-color);
 
-.skills-wrapper {
-	width: 70%;
-	margin: 25px auto;
-	display: flex;
-	justify-content: space-evenly;
-	flex-wrap: wrap;
-
-	h1 {
-		font-size: 75px;
-		color: var(--dark-shade-m1);
-	}
-
-	.wrapper-icon {
-		margin: auto 0;
-		padding: 0 10px;
-		div {
-			display: flex;
-			align-items: center;
-		}
-		label {
-			display: block;
-			text-align: center;
-			color: var(--light-gray);
-		}
-		.skill-icon {
-			max-width: 100%;
-			height: 80px;
-			width: 80px;
-			margin: auto;
-		}
+	.bg-clipper {
+		height: 100%;
+		background-color: var(--dark-shade);
+		clip-path: polygon(0px 0px, 100% 0px, 100% 98%, 89% 95%, 31% 85%, 0px 78%);
 	}
 }
 
@@ -392,6 +426,7 @@ select:-webkit-autofill {
 	background-color: var(--dark-shade);
 
 	.bg-clipper {
+		height: 100%;
 		clip-path: polygon(0 0, 100% 0, 100% 85%, 75% 97%, 28% 89%, 0 80%);
 		background-color: var(--main-color);
 	}
@@ -399,7 +434,7 @@ select:-webkit-autofill {
 	.contact-footer {
 		height: 200px;
 		width: 100%;
-		margin-top: 25px;
+		margin-top: 110px;
 		width: 100%;
 
 		ul {
@@ -415,6 +450,10 @@ select:-webkit-autofill {
 			margin: 0 15px;
 			width: 315px;
 			text-align: right;
+
+			i {
+				color: var(--brand-color);
+			}
 		}
 	}
 }
@@ -431,8 +470,12 @@ select:-webkit-autofill {
 		margin-bottom: -45px;
 	}
 	.portfolio-thumbnail-wrapper {
-		padding: 50px;
+		padding: 10px;
 		background-color: var(--dark-shade-m1);
+
+		img {
+			clip-path: polygon(calc(100% - 50px) 0, 100% 50px, 100% 100%, 50px 100%, 0 calc(100% - 50px), 0 0);
+		}
 	}
 
 	.portfolio-item {
@@ -449,8 +492,8 @@ select:-webkit-autofill {
 				display: inline-block;
 				margin: 10px 10px 0 10px;
 				padding: 5px 15px;
-				background-color: var(--light-gray);
-				color: var(--main-color);
+				background-color: var(--dark-shade-m1);
+				color: var(--brand-color);
 				font-weight: bold;
 				transition: 0.3s ease-in-out;
 
@@ -461,7 +504,6 @@ select:-webkit-autofill {
 			li:hover {
 				transform: scale(1.1);
 				background-color: var(--main-color);
-				color: var(--light-gray);
 			}
 		}
 		p {
