fixed border artifacts with fullpage (gradient bg, margin-top)

--- a/public/main.css
+++ b/public/main.css
@@ -336,7 +336,8 @@ select:-webkit-autofill {
 }
 
 #skills-section {
-  background-color: var(--main-color);
+  margin-top: -1px;
+  background-color: linear-gradient(to bottom, var(--main-color) 50%, var(--dark-shade) 50%);
 }
 
 #skills-section .bg-clipper {
@@ -426,7 +427,7 @@ select:-webkit-autofill {
 }
 
 #contact-section {
-  background-color: var(--dark-shade);
+  background-color: linear-gradient(to bottom, var(--main-color) 50%, var(--dark-shade) 50%);
 }
 
 #contact-section .bg-clipper {
@@ -467,7 +468,8 @@ select:-webkit-autofill {
 }
 
 #portfolio-section {
-  background-color: var(--dark-shade);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(50%, var(--main-color)), color-stop(50%, var(--dark-shade)));
+  background: linear-gradient(to bottom, var(--main-color) 50%, var(--dark-shade) 50%);
 }
 
 #portfolio-section .bg-clipper {
