--- a/views/index.ejs
+++ b/views/index.ejs
@@ -51,7 +51,7 @@
 							<li>CSS</li>
 						</ul>
 						<div class="skill-call-wrapper">
-							<a href="#skills" class="action-link inverted m-auto">My skills</a>
+							<a href="#skills" class="action-link inverted m-auto">Skills</a>
 						</div>
 					</div>
 
