--- a/public/main.scss
+++ b/public/main.scss
@@ -1,19 +1,36 @@
 $colors: (
-	primary: #eeeeee,
-	primary-light: lighten(#eeeeee, 40%),
-	primary-dark: darken(#eeeeee, 40%),
-	secondary: #cccccc
+	light-shade: #f1f1f1,
+	light-gray: #f2f2f2,
+	dark-shade: #080808,
+	dark-shade-light: lighten(#080808, 7.5%),
+	main: #f34023
 );
-
-//map-get($colors, primary);
 
 @function color($colorName) {
 	@return map-get($colors, $colorName);
 }
 
-//color(primary);
+/* 
+	alt main colors
+		#f34023 orangeish
+ 		#5f23f3 purple
+	
+	--light-shade: #cd5c5c;
+	--dark-shade: #0e0e0e;
+	--dark-shade-m1: #232323;
+	--light-gray: #f2f2f2;
+
+	
+	--light-shade: #f1f1f1;
+	--brand-color: #f34023;
+	--dark-shade: #080808;
+	--dark-shade-m1: #232323;
+	--light-gray: #f2f2f2;
+*/
 
 $desktop: 840px;
+
+/*
 @mixin desktop {
 	@media (min-width: #{$desktop}) {
 		@content;
@@ -25,7 +42,7 @@ $desktop: 840px;
 	line-height: 1.7em;
 }
 
-.class {
+.classxx {
 	@extend %text;
 
 	@include desktop {
@@ -37,30 +54,10 @@ html[data-theme="dark"] {
 	//transition effect when swapping theme
 	//js script sets data theme
 }
-
+*/
 @import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap"); /* main */
 
 /* GLOBAL */
-:root {
-	/* alt main colors
-		#f34023 orangeish
- 		#5f23f3 purple
-	
-	--main-color: #cd5c5c;
-
-	--dark-shade: #0e0e0e;
-	--dark-shade-m1: #232323;
-
-	--light-gray: #f2f2f2;*/
-
-	--main-color: #f1f1f1;
-	--brand-color: #f34023;
-
-	--dark-shade: #080808;
-	--dark-shade-m1: #232323;
-
-	--light-gray: #f2f2f2;
-}
 
 * {
 	margin: 0;
@@ -75,11 +72,11 @@ html[data-theme="dark"] {
 body,
 html {
 	height: 100vh;
-	background-color: var(--dark-shade);
+	background-color: color(dark-shade);
 }
 
 body {
-	background-color: var(--main-color);
+	background-color: color(light-shade);
 	overflow-x: hidden;
 	z-index: 0;
 }
@@ -89,7 +86,7 @@ body {
 	width: 100%;
 	height: 50px;
 	border: none !important;
-	background: var(--brand-color) !important;
+	background: color(main) !important;
 	color: white;
 	outline: none;
 	cursor: pointer;
@@ -109,7 +106,7 @@ body {
 	display: block;
 	padding: 10px 0;
 	border: none !important;
-	background: var(--brand-color);
+	background: color(main);
 	color: white;
 	outline: none;
 	cursor: pointer;
@@ -132,8 +129,8 @@ body {
 }
 
 .action-link:hover {
-	background: var(--light-gray) !important;
-	color: var(--brand-color) !important;
+	background: color(light-gray) !important;
+	color: color(main) !important;
 	text-decoration: none;
 	font-weight: bold;
 }
@@ -141,14 +138,14 @@ body {
 /*
 .action-link.inverted,
 .action-btn.inverted {
-	background: var(--dark-shade-m1) !important;
-	color: var(--brand-color) !important;
+	background: color(dark-shade-light) !important;
+	color: color(main) !important;
 }*/
 
 .action-link.inverted:hover,
 .action-btn.inverted:hover {
-	background: var(--dark-shade-m1) !important;
-	color: var(--brand-color) !important;
+	background: color(dark-shade-light) !important;
+	color: color(main) !important;
 	font-weight: bold;
 }
 
@@ -158,19 +155,19 @@ body {
 
 .fp-controlArrow.fp-next {
 	right: 50px;
-	border-color: transparent transparent transparent var(--dark-shade-m1);
+	border-color: transparent transparent transparent color(dark-shade-light);
 }
 
 .fp-controlArrow.fp-prev {
 	left: 50px;
-	border-color: transparent var(--dark-shade-m1) transparent transparent;
+	border-color: transparent color(dark-shade-light) transparent transparent;
 }
 
 input,
 textarea {
 	background-color: #e6e6e6 !important;
 	font-weight: bold;
-	color: var(--brand-color);
+	color: color(main);
 	box-sizing: border-box;
 	border: 2px solid transparent !important;
 	padding: 12px 15px;
@@ -194,7 +191,7 @@ select:-webkit-autofill:focus {
 input:-webkit-autofill,
 textarea:-webkit-autofill,
 select:-webkit-autofill {
-	-webkit-text-fill-color: var(--brand-color) !important;
+	-webkit-text-fill-color: color(main) !important;
 	border: 2px solid transparent !important;
 	box-shadow: 0 0 0 30px #e6e6e6 inset !important;
 	-webkit-box-shadow: 0 0 0 30px #e6e6e6 inset !important;
@@ -203,7 +200,7 @@ select:-webkit-autofill {
 
 .control-label {
 	font-size: 24px;
-	color: var(--dark-shade);
+	color: color(dark-shade);
 	font-weight: bold;
 	margin-bottom: -3px;
 }
@@ -215,13 +212,13 @@ select:-webkit-autofill {
 	font-family: "Montserrat";
 	font-size: 1.5em;
 	margin-left: 3%;
-	color: var(--light-gray) !important;
+	color: color(light-gray) !important;
 	transition: ease-in-out 0.3s; /* causes brand to slide in */
 	padding: 0;
 }
 
 .navbar-brand:hover {
-	color: var(--brand-color) !important;
+	color: color(main) !important;
 }
 
 .navbar-dark {
@@ -236,13 +233,13 @@ select:-webkit-autofill {
 		a {
 			padding: 0;
 			i {
-				color: var(--light-gray);
+				color: color(light-gray);
 				transition: ease-in-out 0.3s;
 				font-size: 1.5em;
 			}
 
 			i:hover {
-				color: var(--brand-color);
+				color: color(main);
 			}
 		}
 	}
@@ -252,19 +249,19 @@ select:-webkit-autofill {
 /* HOME */
 #landing-section {
 	background-repeat: no-repeat;
-	background-color: var(--dark-shade);
+	background-color: color(dark-shade);
 	/*background-image: url(/svg/background_landing.svg);
 	background-size: cover;*/
 	z-index: 2;
 }
 
 .main-section {
-	background-color: var(--dark-shade);
+	background-color: color(dark-shade);
 	height: 100vh;
 }
 
 .main-section.even {
-	background-color: var(--main-color);
+	background-color: color(light-shade);
 }
 
 .hero {
@@ -272,7 +269,7 @@ select:-webkit-autofill {
 
 	h3 {
 		font-size: 22px;
-		color: var(--brand-color);
+		color: color(main);
 		opacity: 0.85;
 		margin-top: 10%;
 		margin-left: 13%;
@@ -325,7 +322,7 @@ select:-webkit-autofill {
 	font-size: 8rem;
 	font-family: "Montserrat";
 	font-weight: bold;
-	color: var(--brand-color);
+	color: color(main);
 	margin-left: 10%;
 	margin-top: -25px;
 	font-style: italic;
@@ -333,11 +330,11 @@ select:-webkit-autofill {
 }
 
 .main-section.even .hero-title {
-	color: var(--brand-color);
+	color: color(main);
 }
 
 .hero-secondary-title {
-	color: var(--brand-color);
+	color: color(main);
 	opacity: 0.9;
 	font-size: 3.5rem;
 	width: 50%;
@@ -347,11 +344,11 @@ select:-webkit-autofill {
 
 #skills-section {
 	margin-top: -1px;
-	background-color: linear-gradient(to bottom, var(--main-color) 50%, var(--dark-shade) 50%);
+	background: linear-gradient(to bottom, color(dark-shade) 50%, color(light-shade) 50%);
 
 	.bg-clipper {
 		height: 100%;
-		background-color: var(--dark-shade);
+		background-color: color(dark-shade);
 		clip-path: polygon(0 0, 100% 0, 100% 98%, 75% 95%, 22% 93%, 0 90%);
 	}
 
@@ -363,14 +360,14 @@ select:-webkit-autofill {
 	.skills-section {
 		h2 {
 			font-size: 3rem;
-			color: var(--brand-color);
+			color: color(main);
 			opacity: 0.95;
 		}
 	}
 
 	.skills-text {
 		text-align: center;
-		color: var(--brand-color);
+		color: color(main);
 		opacity: 0.95;
 		font-size: 2em;
 		transform: rotate(90deg);
@@ -388,7 +385,7 @@ select:-webkit-autofill {
 
 		h1 {
 			font-size: 75px;
-			color: var(--dark-shade-m1);
+			color: color(dark-shade-light);
 		}
 
 		.wrapper-icon {
@@ -401,7 +398,7 @@ select:-webkit-autofill {
 			label {
 				display: block;
 				text-align: center;
-				color: var(--light-gray);
+				color: color(light-gray);
 			}
 			.skill-icon {
 				max-width: 100%;
@@ -414,22 +411,22 @@ select:-webkit-autofill {
 }
 
 #landing-section {
-	background-color: var(--main-color);
+	background-color: color(light-shade);
 
 	.bg-clipper {
 		height: 100%;
-		background-color: var(--dark-shade);
+		background-color: color(dark-shade);
 		clip-path: polygon(0px 0px, 100% 0px, 100% 98%, 89% 95%, 31% 85%, 0px 78%);
 	}
 }
 
 #contact-section {
-	background: linear-gradient(to bottom, var(--main-color) 50%, var(--dark-shade) 50%);
+	background: linear-gradient(to bottom, color(light-shade) 50%, color(dark-shade) 50%);
 
 	.bg-clipper {
 		height: 100%;
 		clip-path: polygon(0 0, 100% 0, 100% 85%, 75% 97%, 28% 89%, 0 80%);
-		background-color: var(--main-color);
+		background-color: color(light-shade);
 	}
 
 	.contact-footer {
@@ -453,17 +450,17 @@ select:-webkit-autofill {
 			text-align: right;
 
 			i {
-				color: var(--brand-color);
+				color: color(main);
 			}
 		}
 	}
 }
 
 #portfolio-section {
-	background: linear-gradient(to bottom, var(--main-color) 50%, var(--dark-shade) 50%);
+	background: linear-gradient(to bottom, color(light-shade) 50%, color(dark-shade) 50%);
 
 	.bg-clipper {
-		background-color: var(--main-color);
+		background-color: color(light-shade);
 		clip-path: polygon(0 0, 100% 0, 100% 73%, 71% 77%, 29% 79%, 0 81%);
 	}
 
@@ -472,7 +469,7 @@ select:-webkit-autofill {
 	}
 	.portfolio-thumbnail-wrapper {
 		padding: 10px;
-		background-color: var(--dark-shade-m1);
+		background-color: color(dark-shade-light);
 
 		img {
 			clip-path: polygon(calc(100% - 50px) 0, 100% 50px, 100% 100%, 50px 100%, 0 calc(100% - 50px), 0 0);
@@ -493,8 +490,8 @@ select:-webkit-autofill {
 				display: inline-block;
 				margin: 10px 10px 0 10px;
 				padding: 5px 15px;
-				background-color: var(--dark-shade-m1);
-				color: var(--brand-color);
+				background-color: color(dark-shade-light);
+				color: color(main);
 				font-weight: bold;
 				transition: 0.3s ease-in-out;
 
@@ -504,7 +501,7 @@ select:-webkit-autofill {
 
 			li:hover {
 				transform: scale(1.1);
-				background-color: var(--main-color);
+				background-color: color(light-shade);
 			}
 		}
 		p {
